# Gluonverse

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  render.yaml
.github/workflows/: deploy.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/gluonverse/: config.py  main.py
backend/src/gluonverse/api/: __init__.py  routes.py
backend/src/gluonverse/models/: __init__.py  schemas.py
backend/src/gluonverse/observables/: __init__.py  calculators.py
backend/src/gluonverse/physics/: __init__.py  color.py  constants.py  cornell.py  hadrons.py  integrators.py  lattice.py  particles.py  su3.py  units.py
backend/src/gluonverse/simulations/: __init__.py  base.py  educational.py  lattice_engine.py  manager.py
backend/src/gluonverse/storage/: __init__.py  repository.py
backend/src/gluonverse/validation/: __init__.py  checks.py
backend/src/gluonverse/websocket/: __init__.py  manager.py
backend/tests/: test_api_and_exports.py  test_lattice_qcd_4d.py  test_particles_and_hadrons.py  test_potential_and_integrator.py  test_su3_lattice.py
docs/: approximations.md  architecture.md  physics-models.md  roadmap.md  units.md  validation.md
examples/: baryon.json  lattice_demo.json  meson.json  quark_antiquark.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: CameraFit.tsx  EnergyChart.tsx  FloatingPanel.tsx  (+4 more)
frontend/tests/: educational.test.ts  elements.test.ts
(+42 files in other folders)
