[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gluonverse"
version = "0.2.0"
description = "Educational and computational particle-field simulation platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "numpy>=1.26,<3.0",
  "scipy>=1.13,<2.0",
  "numba>=0.59,<1.0",
  "matplotlib>=3.8,<4.0",
  "h5py>=3.11,<4.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
